# lp-to-jira-sync

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflow/: foundations-sync.yml
.github/workflows/: foundations-sync.yml
lp_to_jira_sync/: .sync_config.py.swp  jira_config.py  lp_to_jira_sync.py  sync_config.py
samples/: foundations_packages_components_mapping.json
snap/: snapcraft.yaml
tests/: test_jira_config.py  test_lp_to_jira_sync.py  test_sync_config.py
