[metadata]
name = lp_to_jira_sync
version = 0.2
description = A CLI to sync bug from LP to Jira
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mclemenceau/lp-to-jira-sync
project_urls =
    Bug Reports = https://github.com/mclemenceau/lp-to-jira-sync/issues
    Source Code = https://github.com/mclemenceau/lp-to-jira-sync
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v2 (AGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    launchpadlib

[options.extras_require]
test =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    lp-to-jira-sync = lp_to_jira_sync.lp_to_jira_sync:main

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source = lp_to_jira_sync
branch = true

[coverage:report]
show_missing = true
exclude_lines =
    raise NotImplementedError
    assert False
